# CaramelDB

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DUMP.md  PREFILTER_THEORY.md  README.md  TODOS.md  bad_entropy_distribution.py  benchmark_numbers.txt  cython_bindings.cpp  cython_bindings.pxd  cython_bindings.pyx  good_entropy_distribution.py  lazy.py  newsetup.py  old_setup.py  profile.py  script.py  setup.py  system.py  test.py  uniform_distribution.py
.claude/: settings.local.json
.claude/skills/catching-up/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/trim/: SKILL.md
artifacts/: AutoCSF.md  array-benchmark.md  multiset-benchmark-2.md  multiset-benchmark-empirical.md  multiset-benchmark.md
artifacts/AutoCSF/: AutoCSF.md  original_table.md
artifacts/papers/autocsf/: AutoCSF.md
artifacts/papers/autocsf/experiments/: README.md
artifacts/recsys26/: abs.tex  algorithm.tex  amazon.tex  background.tex  codebook.tex  conclusion.tex  experiments.tex  intro.tex  main.bib  main.tex  methodology.tex  plan.md  related-work.tex
cython/: _caramel.pxd  _caramel.pyx  caramel_types.h  cython_bindings.pyx  pyproject.toml  setup.py
cython/carameldb/: __init__.py
experiments/: NOTES.md  README.md  benchmark.py  binding_overhead_benchmark.py  bloom_theory.py  bounds_validation.py  confirm_crossover.py  csf_benchmark.py  csf_filter_guide.py  data_gen.py  debug_binary_fuse.py  epsilon_sweep.py  find_optimal_alpha.py  hyperparameter_search.py  measure.py  measure_filter_size.py  optimal_filter_sweep.py  parse_results.py  plotting.py  query_batch_bench.py  query_benchmark.py  query_latency_bench.py  query_overhead_breakdown.py  quick_alpha_scan.py  recommend_filter.py  repro_filter_slowdown.py  run_all.sh  runner.py  shibuya.py  step_function_analysis.py  tables.md  theory.py
experiments/baselines/: make_plots.py  methods.py  run_baselines.py  shibuya.py
experiments/baselines/figures/: java_csf_results.json  java_mph_results.json  tables.md
experiments/baselines/figures/data/: baselines_a0.8_unique_binary_fuse.json  baselines_combined_binary_fuse.json  baselines_n10000000_a0.5_uniform_100_binary_fuse.json  baselines_n10000000_a0.5_unique_binary_fuse.json  baselines_n10000000_a0.5_zipfian_binary_fuse.json  baselines_n10000000_a0.6_uniform_100_binary_fuse.json  baselines_n10000000_a0.6_unique_binary_fuse.json  baselines_n10000000_a0.6_zipfian_binary_fuse.json  baselines_n10000000_a0.7_uniform_100_binary_fuse.json  baselines_n10000000_a0.7_unique_binary_fuse.json  baselines_n10000000_a0.7_zipfian_binary_fuse.json  baselines_n10000000_a0.8_uniform_100_binary_fuse.json  baselines_n10000000_a0.8_unique_binary_fuse.json  baselines_n10000000_a0.8_zipfian_binary_fuse.json  baselines_n10000000_a0.95_uniform_100_binary_fuse.json  baselines_n10000000_a0.95_unique_binary_fuse.json  baselines_n10000000_a0.95_zipfian_binary_fuse.json  baselines_n10000000_a0.99_uniform_100_binary_fuse.json  baselines_n10000000_a0.99_unique_binary_fuse.json  baselines_n10000000_a0.99_zipfian_binary_fuse.json  baselines_n10000000_a0.9_uniform_100_binary_fuse.json  baselines_n10000000_a0.9_unique_binary_fuse.json  baselines_n10000000_a0.9_zipfian_binary_fuse.json  baselines_n1000000_a0.5_uniform_100_binary_fuse.json  (+50 more)
experiments/paper_plots/: make_plots.py  run_experiments.py  theory.py
experiments/shibuya_comparison/: make_plots.py
pybind/: PythonBindings.cc  setup.py
pybind/carameldb/: __init__.py  filters.py
python_bindings/: PythonBindings.cc
python_bindings/caramel/: __init__.py
python_bindings/carameldb/: __init__.py
python_tests/: conftest.py  test_auto_filter.py  test_csf.py  test_csf_filter.py  test_csf_stats.py  test_dummy.py  test_filter.py  test_multiset_csf.py  test_packed_csf.py  test_ragged_multiset_csf.py
scripts/: benchmark.py  benchmark_array.py  benchmark_multiset.py  benchmark_multiset_sweep.py  csf_filter_guide.py  generate_dataset.py  generate_empirical_dataset.py  generate_empirical_parallel.py  peek_dataset.py  retroactive_shared_cb_size.py  run_empirical_grid.py  run_multiset_100m.py  run_multiset_100m_batch.py  run_multiset_empirical.py
src/: BitArray.cc  BitArray.h  BucketedHashStore.cc  BucketedHashStore.h  CMakeLists.txt  CSF.cc  CSF.h  CTestTestfile.cmake  Codec.cc  Codec.h  Construct.cc  Construct.h  Dummy.cc  Dummy.h  Makefile  Modulo2System.cc  Modulo2System.h  SpookyHash.cc  SpookyHash.h  cmake_install.cmake
src/baselines/: UnorderedMapBaseline.h
src/construct/: BloomFilter.cc  BloomFilter.h  BloomPrefiltering.h  BucketedHashStore.cc  BucketedHashStore.h  Codec.cc  Codec.h  Construct.cc  Construct.h  ConstructMultiset.h  ConstructUtils.h  Csf.cc  Csf.h  CsfCodebook.h  CsfQueryCore.h  CsfStats.h  EntropyPermutation.h  MultisetCsf.h  SpookyHash.cc  SpookyHash.h  SpookyHash2.cc  SpookyHash2.h  entropyPermutation.h
src/construct/filter/: AutoFilterSelection.h  BinaryFuseFilter.h  BinaryFusePreFilter.h  BitPackedArray.h  BitPackedBinaryFuseFilter.h  BitPackedXorFilter.h  BloomFilter.h  BloomPreFilter.h  BloomPrefilter.h  FilterConfig.h  FilterFactory.h  FilterTypes.h  PreFilter.h  XORPreFilter.h  XorFilter.h
src/construct/multiset/: ConstructMultiset.h  ConstructPacked.h  ConstructRaggedMultiset.h  MultisetConfig.h  MultisetCsf.h  PackedCsf.h  RaggedMultisetCsf.h
src/solve/: GaussianElimination.cc  GaussianElimination.h  HypergraphPeeler.cc  HypergraphPeeler.h  LazyGaussianElimination.cc  LazyGaussianElimination.h  Solve.cc  Solve.h
src/tests/: CMakeLists.txt  CSFTest.cc  DummyTest.cc
src/utils/: ProgressBar.h  SafeFileIO.h  Timer.h
tests/: AutoFilterSelectionTest.cc  BinaryFuseFilterTest.cc  BitArrayTest.cc  BitPackedArrayTest.cc  BitPackedXorFilterTest.cc  BloomFilterTest.cc  BucketedHashStoreTest.cc  CMakeLists.txt  CodecTest.cc  ConstructCsfTest.cc  DebugBinaryFuseTest.cc  EntropyPermutationTest.cc  FilterSizeComparisonTest.cc  GaussianEliminationTest.cc  GlobalSortPermutationTest.cc  HypergraphPeelerTest.cc  LazyGaussianEliminationTest.cc  LibraryBinaryFuseTest.cc  SolveTest.cc  TestUtils.h  XorFilterTest.cc
(+55 files in other folders)
